[FEATURE] Replaced String.format to formatted (#76)
* [FEATURE] Replaced to pattern matching instanceof

* [FEATURE] Replaced String.format to formatted